--- a/.env
+++ b/.env
@@ -1,10 +1,16 @@
 
 # ------------------------------------------------------------------
-# إعدادات الاتصال بـ SUPABASE
+# إعدادات الاتصال بـ Google Cloud (Sheets & Drive)
 # ------------------------------------------------------------------
-# 1. اذهب إلى https://supabase.com وأنشئ مشروعاً جديداً
-# 2. اذهب إلى Project Settings -> API
-# 3. انسخ القيم وضعها هنا بدلاً من القيم الافتراضية
+# 1. أنشئ مشروعاً في Google Cloud Console
+# 2. فعّل Google Sheets API و Google Drive API
+# 3. أنشئ Credentials (API Key & OAuth 2.0 Client ID)
+# 4. أنشئ Google Sheet جديدة وانسخ الـ ID الخاص بها من الرابط
+# 5. تأكد من أن الـ Sheet تحتوي على التبويبات التالية:
+#    Users, Branches, Reports, Inventory, Config
+# ------------------------------------------------------------------
 
-VITE_SUPABASE_URL=https://psjestluejtbpwlmeowk.supabase.co
-VITE_SUPABASE_ANON_KEY=sb_publishable_Clx9nrYcEVyYGv_p39V0-Q_vrWYMvHG
+VITE_GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
+VITE_GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
+VITE_GOOGLE_SHEET_ID=YOUR_SHEET_ID
+VITE_GOOGLE_DRIVE_FOLDER_ID=root
