--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "ems-platform",
   "private": true,
@@ -24,6 +25,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/leaflet": "^1.9.8",
+    "@types/node": "^22.5.4",
     "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
